# gliderad2cp

./: .gitignore  .pre-commit-config.yaml  02_integrate_velocity_shear.ipynb  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  documentation.md  example_processing.ipynb  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: draft-pdf.yml  pypi.yml  sphinx-docs.yml  tests.yml
docs/source/: conf.py  gliderad2cp.rst  index.rst
gliderad2cp/: download_example_data.py  process_adcp.py  process_bias.py  process_compass.py  process_currents.py  process_shear.py  tools.py
tests/: test_adcp_processing.py
